<resources>
    <string name="app_name">HabbitatTracker</string>
    <string name="add_new_habit">add new habit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_name_habit">Введите название привычки</string>
    <string name="name">Название</string>
    <string name="description">Описание</string>
    <string name="priority">Приоритет</string>
    <string name="type">Тип</string>
    <string name="useful">Полезная</string>
    <string name="not_useful">Неполезная</string>
    <string name="count_ready">Количество выполнения привычки</string>
    <string name="_10">10</string>
    <string name="period">Периодичность</string>
    <string name="_2">2</string>
    <string name="delete_habit">Удалить привычку</string>
    <string name="save">Сохранить</string>
    <string name="add_your_first_new_habit">Добавьте свою первую привычку</string>
    <string name="home_screen">Домашний экран</string>
    <string name="app_info">Информация о приложении</string>
    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="toolbar_title">Будь сильным!</string>
    <string name="version_1_home_task_4">version 1, home task 4</string>


    <array name="priority_of_habit">
        <item>Неважная</item>
        <item>Обычная</item>
        <item>Важная</item>
    </array>

</resources>